load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "pipeline",
    srcs = [
        "__init__.py",
        "runner.py",
        "transforms.py",
    ],
    imports = ["../.."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference",
        "//machine-learning/galadril-inference/src/galadril_inference/storage",
        "//platform/vision/src/galadril_vision/common",
        "//platform/vision/src/galadril_vision/connectors/kafka",
        "//platform/vision/src/galadril_vision/connectors/postgres",
        "@pip//boto3",
        "@pip//boto3_stubs",
        "@pip//daft",
        "@pip//numpy",
        "@pip//opencv_python_headless",
        "@pip//ray",
        "@pip//structlog",
    ],
)
