load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "kafka",
    srcs = [
        "__init__.py",
        "consumer.py",
        "schemas.py",
    ],
    imports = ["../../.."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//platform/vision/src/galadril_vision/common",
        "@pip//authlib",  # keep
        "@pip//cachetools",  # keep
        "@pip//confluent_kafka",
        "@pip//fastavro",  # keep
        "@pip//httpx",  # keep
        "@pip//orjson",
        "@pip//pydantic",
        "@pip//structlog",
    ],
)
