load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "postgres",
    srcs = [
        "__init__.py",
        "client.py",
        "graph.py",
        "vector.py",
    ],
    imports = ["../../.."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//platform/vision/src/galadril_vision",
        "//platform/vision/src/galadril_vision/common",
        "@pip//orjson",
        "@pip//pgvector",
        "@pip//psycopg",
        "@pip//psycopg_pool",
        "@pip//structlog",
    ],
)
